--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,27 +8,47 @@
 </head>
 <body>
     <div>
+        <a href="./reserve">Reserved rooms</a>
+        <a href="./admin">Admin</a>
+<hr> 
         <h1>Explore Rooms</h1>
         <div class="images"> 
             <div>
                 <img src="/images/img1.jpg" id="img1" alt="loading" width="500">
+                <button onclick="Pick('img1')">pick</button>
             </div>
             <div>
                 <img src="/images/img2.jpg" id="img2" alt="loading" width="500">  
+                <button onclick="Pick('img2')">pick</button>
             </div>
             <div>
                 <img src="/images/img3.jpg" id="img3" alt="loading" width="500"> 
+                <button onclick="Pick('img3')">pick</button>
             </div>
+
+            <div>
+                <img src="/images/img4.jpeg" id="img4" alt="loading" width="500"> 
+                <button onclick="Pick('img4')">pick</button>
+            </div>
+
+            <div>
+                <img src="/images/img5.jpg" id="img5" alt="loading" width="500"> 
+                <button onclick="Pick('img5')">pick</button>
+            </div>
+
+            <div>
+                <img src="/images/img6.jpg" id="img6" alt="loading" width="500"> 
+                <button onclick="Pick('img6')">pick</button>
+            </div>
+
         </div>
-        <a href="./reserve">Reserved rooms</a>
-        <a href="./admin">Admin</a>
+        <hr> 
     </div>
 
     <!-- Image viewer (modal) container -->
     <div id="imageViewer">
         <div id="imageViewerContent">
             <span id="closeViewer">X</span>
-            <span id="markPicker"> pick </span>
             <!-- Display image and descriptions here -->
             <img id="viewImage" width="300">
             <p id="roomNumber"></p>
@@ -36,51 +56,6 @@
             <p id="roomPrice"></p>
         </div>
     </div>
-
-    <script>
-        let viewImage = document.getElementById('viewImage');
-        let roomNumber = document.getElementById('roomNumber');
-        let roomDescription = document.getElementById('roomDescription');
-        let roomPrice = document.getElementById('roomPrice');
-
-
-        function openImage(imageSrc, number, description, price){
-            const imageViewer = document.getElementById('imageViewer');
-            viewImage.src = imageSrc;
-            roomNumber.textContent = `Room number: ${number}`;
-            roomDescription.textContent = `Description: ${description}`;
-            roomPrice.textContent = `Price: ${price}`;
-            imageViewer.style.display = 'block';
-        }
-
-        
-        function markPick(){
-            //when the user clicks pick, the image should move to reserved room!
-        }
-
-        
-        // Function to close the image viewer (modal)
-        function closeImageViewer() {
-            const imageViewer = document.getElementById('imageViewer');
-            imageViewer.style.display = 'none';
-        }
-
-
-        // Attach click event listeners to each image
-        const img1 = document.getElementById('img1');
-        const img2 = document.getElementById('img2');
-        const img3 = document.getElementById('img3');
-
-        img1.addEventListener('click', () => openImage(img1.src, '23', 'Fair lighting with a beautiful view of the city', 'k400 per Night'));
-        img2.addEventListener('click', () => openImage(img2.src, '43', 'Dark room amazing for relaxing', 'k600 per Night'));
-        img3.addEventListener('click', () => openImage(img3.src, '66', 'Morning sunlights with a beautiful view of the ocean', 'k500 per Night'));
-
-        const closeViewer = document.getElementById('closeViewer');
-        closeViewer.addEventListener('click', closeImageViewer);
-
-        const markPicker = document.getElementById('markPicker');
-        markPicker.addEventListener('click',markPick);
-
-    </script>
+    <script src="../app.js"> </script>
 </body>
 </html>
