implemented bcrypt for hashing user password

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div>
-        <a href="./reserve">Reserved rooms</a>
+        <a href="./reserve">Reserved room</a>
         <a href="./admin">Admin</a>
 <hr> 
-        <h1>Explore Rooms</h1>
+        <h1>Explore</h1>
         <div class="images"> 
             <div>
                 <img src="/images/img1.jpg" id="img1" alt="loading" width="500">
