--- a/public/signUp.css
+++ b/public/signUp.css
@@ -28,7 +28,7 @@ label {
     margin-bottom: 5px;
 }
 
-input[type="text"] {
+input{
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
