Done the register checking system

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,8 +12,8 @@
         <div class="container"> 
 
             <div class="row"> 
-                <label for="username">Username</label>
-                <input type="text" id="firstName" name="username" placeholder="username" required>
+                <label for="email">Email</label>
+                <input type="text" id="email" name="email" placeholder="email" required>
             </div>
 
             <div class="row"> 
