--- a/views/reserve.ejs
+++ b/views/reserve.ejs
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="reserve.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Reserve room</title>
 </head>
 <body>
     <a class="link" href="./index">Return</a>
