--- a/views/adminLogin.ejs
+++ b/views/adminLogin.ejs
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <link rel="stylesheet" href="all.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Register</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Register</h1>
-    <form action="/register" method="POST">
+    <h1>Login As Admin </h1>
+    <form action="/loginAsAdmin" method="POST">
         <div class="container"> 
-
-            <div class="row"> 
-                <label for="username">Username</label>
-                <input type="text" id="firstName" name="username" placeholder="username" required>
-            </div>
 
             <div class="row"> 
                 <label for="email">Email</label>
@@ -23,7 +17,7 @@
             </div>
 
             <div class="row"> 
-                <label for="password">Password</label>
+                <label for="password">password</label>
                 <input type="password" id="password" name="password" placeholder="password" required>
             </div>
 
@@ -32,6 +26,6 @@
             </div>
         </div>
     </form>
+   
 </body>
 </html>
-
